--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- css bootstrap table-->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css">
+    <!-- css select2 -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <!-- css -->
     <link href="css/index.CSS" rel="stylesheet">
+    
 </head>
 <body>
-    
+    <div class="row">
+        <div class="col-3">
+            <select type="text" name="select2_nome_completo" id="select2_nome_completo" class="form-control" ></select>
+        </div>
+        <div class="col-3">
+            <button onclick="buscar_dados()" type="button" class="btn btn-light">Buscar</button>
+        </div>
+    </div>
     <div class="row">
         <div class="col-12">
             <button onclick="open_md_cadastro()" type="button" class="btn btn-dark">Adicionar</button>
@@ -325,8 +335,11 @@
     <!-- Bootstrap Table -->
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.17.1/locale/bootstrap-table-pt-BR.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <!-- Scripts JS -->
     <script src="js/funcoes.js"></script>
+    <script src="js/select2-PTBR.js" type="text/javascript"></script>
     <script src="js/index.js"></script>
 </body>
 
