--- a/cadastro.html
+++ b/cadastro.html
@@ -3,20 +3,28 @@
 <div class="filter_datatables">
     <div class="row">
         <div class="col-3" >
-            <span>Nome completo</span>
-            <select type="text" name="select2_nome_completo" id="select2_nome_completo" class="form-control" ></select>
+            <div class="form-group">
+                <span>Nome completo</span>
+                <select type="text" name="select2_nome_completo" id="select2_nome_completo" class="form-control" ></select>
+            </div>
         </div>
         <div class="col-3">
-            <span>CPF:</span>
-            <input type="int" class="form-control" id="filter_cpf">
+            <div class="form-group">
+                <span>CPF:</span>
+                <input type="int" class="form-control" id="filter_cpf">
+            </div>    
         </div> 
         <div class="col-3">
-            <span>RG:</span>
-            <input type="int" class="form-control" id="filter_rg">
+            <div class="form-group">
+                <span>RG:</span>
+                <input type="int" class="form-control" id="filter_rg">
+            </div>    
         </div> 
         <div class="col-3">
-            <span>Email:</span>
-            <input type="email" class="form-control" id="filter_email">
+            <div class="form-group">
+                <span>Email:</span>
+                <input type="email" class="form-control" id="filter_email">
+            </div>    
         </div>
     </div>
     <div class="row">
