--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sistema iiSoul</title>
     <!-- css -->
-    <link href="css/links.css" rel="stylesheet">
-    <link href="css/index.CSS" rel="stylesheet">
+  <link href="css/links.css" rel="stylesheet">
+  <link href="css/index.CSS" rel="stylesheet">
     
 </head>
 <body>
