login com segurança

--- a/login.html
+++ b/login.html
@@ -68,20 +68,17 @@
         <img class="mb-4" src="imagens/iisoul-logo.png" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">LOGIN</h1>
         <div class="form-floating">
-          <input type="email" class="form-control" id="email_lg" placeholder="name@example.com">
-          <label for="floatingInput">Email</label>
+          <input type="email" class="form-control" id="email_login" placeholder="name@example.com">
+          <label for="email_login">Email</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="senha_lg" placeholder="Password">
-          <label for="floatingPassword">Senha</label>
+          <input type="password" class="form-control" id="email_senha" placeholder="Password">
+          <label for="email_senha">Senha</label>
         </div>
-        <div class="form-check text-start my-3">
-          <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
-              Lembre-me
-          </label>
+        <div class="">
+          <p><a class="link-opacity-50" href="#">Esqueci a senha</a></p>
         </div>
-        <button class="btn btn-primary w-100 py-2" type="button" onclick="logar()">Entrar</button>
+        <button onclick="login()" class="btn btn-primary w-100 py-2" type="button" >Entrar</button>
     </form>
   </main>
 
